changed display type of div_legend to avoid scrollbar

--- a/main.css
+++ b/main.css
@@ -132,6 +132,7 @@ button {
 #div_legend {
   position: relative;
   left: 50px;
+  display: inline-block;
 }
 
 @media print {
